syntax = "proto3";

package habits;
option go_package = "github.com/ratludu/grpc-habits-tracker/api";

import "habit.proto";

service Habits {
  rpc CreateHabit (
      CreateHabitRequest
      ) returns (CreateHabitResponse);

  rpc GetHabit (
      GetHabitRequest
      ) returns (GetHabitResponse);

  rpc ListHabit(
      ListHabitRequest
      ) returns (ListHabitResponse);

  rpc DeleteHabit(
      DeleteHabitRequest
      ) returns (DeleteHabitResponse);
}

message DeleteHabitRequest {
  string Id = 1;
}

message DeleteHabitResponse {
  string Status = 1;
}

message ListHabitRequest {}

message ListHabitResponse {
  repeated Habit habits = 1;
}

message CreateHabitRequest {
  string name = 1;
  optional int32 weekly_frequency = 2;
}

message CreateHabitResponse {
  Habit habit = 1;
}

message GetHabitRequest {
  string Id = 1;
}

message GetHabitResponse {
  Habit habit = 1;
}
